@@ -333,6 +333,15 @@ reset:
 			c = consume_byte(c);
 		}
 	}
+	else if(c == '\\')
+	{
+		c = consume_byte(c);
+		if(c == '\n')
+		{
+			c = consume_byte(c);
+			goto reset;
+		}
+	}
 	else
 	{
 		c = consume_byte(c);
