@@ -59,6 +59,7 @@ aarch64-tests: \
 	test0032-aarch64-binary \
 	test0033-aarch64-binary \
 	test0034-aarch64-binary \
+	test0035-aarch64-binary \
 	test0100-aarch64-binary \
 	test0101-aarch64-binary \
 	test0102-aarch64-binary \
@@ -104,6 +105,7 @@ amd64-tests: \
 	test0032-amd64-binary \
 	test0033-amd64-binary \
 	test0034-amd64-binary \
+	test0035-amd64-binary \
 	test0100-amd64-binary \
 	test0101-amd64-binary \
 	test0102-amd64-binary \
@@ -146,6 +148,7 @@ knight-posix-tests: \
 	test0032-knight-posix-binary \
 	test0033-knight-posix-binary \
 	test0034-knight-posix-binary \
+	test0035-knight-posix-binary \
 	test0100-knight-posix-binary \
 	test0101-knight-posix-binary \
 	test0102-knight-posix-binary \
@@ -212,6 +215,7 @@ armv7l-tests: \
 	test0032-armv7l-binary \
 	test0033-armv7l-binary \
 	test0034-armv7l-binary \
+	test0035-armv7l-binary \
 	test0100-armv7l-binary \
 	test0101-armv7l-binary \
 	test0102-armv7l-binary \
@@ -257,6 +261,7 @@ x86-tests: \
 	test0032-x86-binary \
 	test0033-x86-binary \
 	test0034-x86-binary \
+	test0035-x86-binary \
 	test0100-x86-binary \
 	test0101-x86-binary \
 	test0102-x86-binary \
@@ -302,6 +307,7 @@ riscv32-tests: \
 	test0032-riscv32-binary \
 	test0033-riscv32-binary \
 	test0034-riscv32-binary \
+	test0035-riscv32-binary \
 	test0100-riscv32-binary \
 	test0101-riscv32-binary \
 	test0102-riscv32-binary \
@@ -347,6 +353,7 @@ riscv64-tests: \
 	test0032-riscv64-binary \
 	test0033-riscv64-binary \
 	test0034-riscv64-binary \
+	test0035-riscv64-binary \
 	test0100-riscv64-binary \
 	test0101-riscv64-binary \
 	test0102-riscv64-binary \
@@ -460,6 +467,9 @@ test0033-riscv32-binary: M2-Planet | results
 
 test0034-riscv32-binary: M2-Planet | results
 	test/test0034/run_test.sh riscv32
+
+test0035-riscv32-binary: M2-Planet | results
+	test/test0035/run_test.sh riscv32
 
 test0100-riscv32-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv32
@@ -590,6 +600,9 @@ test0033-riscv64-binary: M2-Planet | results
 test0034-riscv64-binary: M2-Planet | results
 	test/test0034/run_test.sh riscv64
 
+test0035-riscv64-binary: M2-Planet | results
+	test/test0035/run_test.sh riscv64
+
 test0100-riscv64-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv64
 
@@ -718,6 +731,9 @@ test0033-aarch64-binary: M2-Planet | results
 
 test0034-aarch64-binary: M2-Planet | results
 	test/test0034/run_test.sh aarch64
+
+test0035-aarch64-binary: M2-Planet | results
+	test/test0035/run_test.sh aarch64
 
 test0100-aarch64-binary: M2-Planet | results
 	test/test0100/run_test.sh aarch64
@@ -848,6 +864,9 @@ test0033-amd64-binary: M2-Planet | results
 test0034-amd64-binary: M2-Planet | results
 	test/test0034/run_test.sh amd64
 
+test0035-amd64-binary: M2-Planet | results
+	test/test0035/run_test.sh amd64
+
 test0100-amd64-binary: M2-Planet | results
 	test/test0100/run_test.sh amd64
 
@@ -967,6 +986,9 @@ test0033-knight-posix-binary: M2-Planet | results
 
 test0034-knight-posix-binary: M2-Planet | results
 	test/test0034/hello-knight-posix.sh
+
+test0035-knight-posix-binary: M2-Planet | results
+	test/test0035/hello-knight-posix.sh
 
 test0100-knight-posix-binary: M2-Planet | results
 	test/test0100/hello-knight-posix.sh
@@ -1154,6 +1176,9 @@ test0033-armv7l-binary: M2-Planet | results
 test0034-armv7l-binary: M2-Planet | results
 	test/test0034/run_test.sh armv7l
 
+test0035-armv7l-binary: M2-Planet | results
+	test/test0035/run_test.sh armv7l
+
 test0100-armv7l-binary: M2-Planet | results
 	test/test0100/run_test.sh armv7l
 
@@ -1282,6 +1307,9 @@ test0033-x86-binary: M2-Planet | results
 
 test0034-x86-binary: M2-Planet | results
 	test/test0034/run_test.sh x86
+
+test0035-x86-binary: M2-Planet | results
+	test/test0035/run_test.sh x86
 
 test0100-x86-binary: M2-Planet | results
 	test/test0100/run_test.sh x86
