@@ -260,6 +260,13 @@ c11b0b80c6313843111836759288d60d3a7b31b4b25ea661da6b805f12fa5f1b  test/results/t
 a2284e12fe493956fa01edb128f3f3859193f139f7f649f6e4d7c7ce2299283d  test/results/test0034-riscv32-binary
 a1e19021f2836014dffd3dd15f0fddc7194111922f8f487f40169b02ec248d0b  test/results/test0034-riscv64-binary
 bd8618c590890722150ba31764ac6ca3ea0f3370cf14c1fcc2b551d6971c99af  test/results/test0034-x86-binary
+9fce92054c63c220a9f7e103cd0cd816047c9488846334af2243762f7727e111  test/results/test0035-aarch64-binary
+fb0738bf7d09318387c801c8aad3dbe881e44360b215db2a71f270eb2a1d16a0  test/results/test0035-amd64-binary
+064c35d69708b30c7555b89fe29260e9a0dc3e5c9c2163f830c5ae1ad7ac9f65  test/results/test0035-armv7l-binary
+6937fe3a24d6e87ceb6566c951f07676c202c2e0aa7d271357e178b87d52538c  test/results/test0035-knight-posix-binary
+461d04b4ee24f198252fabb0060bdd04d2a9688719c194939caf05466f3f50e6  test/results/test0035-riscv32-binary
+88242ce0fbc182d2ea9d665a59ac228cb9bf923762dd4c6c6470a133d5cbfcfe  test/results/test0035-riscv64-binary
+da990e8db144d3a03f0a40d47309ded9656c4ceb8a9afd2d251a4617f4dbbf7e  test/results/test0035-x86-binary
 bde7a74e77551915f685007cffda9c70f53ffdf6703272c8066c22d1cc395be8  test/results/test0100-aarch64-binary
 ec4da43c473924f70827c904a4c6d5f45701ab9e76b444ba152af893e16ee440  test/results/test0100-amd64-binary
 8f92b728d28972166e4aa7a3acc400e6dd629ec769cc176f1eedacd26855d130  test/results/test0100-armv7l-binary
@@ -308,10 +315,10 @@ bc0fb770d0f2e27f5dc0e52c4db245ccc9960adedf5d503f3e3db3f84c965b20  test/results/t
 20d6dbfe5bf27384fe904984cdccd2505321dafe90eb4c74a6be8493e1396876  test/results/test0106-riscv32-binary
 8494d3fc2eac69693c8f0797bfc6497ee2faacce3a4a0dcc70d38b9583c3fd9b  test/results/test0106-riscv64-binary
 934581c994dd81c4bbd7b501084f9734c8cd0b9a78fffb08adba75b17083503a  test/results/test0106-x86-binary
-8eb3e2576eac96d0534f04bfdb58161f89a092f9ece01347cea6dacfab2aa529  test/results/test1000-aarch64-binary
-e9da70858a88636ade0321b889a8f97468e2c9d3a9df90927c65e1ccbf994541  test/results/test1000-amd64-binary
-1388a2df647cfb4080d7cf552690792c8d31b69eecaeecc99a01c8811b17c734  test/results/test1000-armv7l-binary
-2974631b9b25e9acbef463085b38e68c1ed4d55ca8281fcc3d5469725878ca43  test/results/test1000-knight-posix-binary
-6d0e1f20bef0d8def6468f3098db6da60fb82a0ea111f415bd71a4628a9e7f77  test/results/test1000-riscv32-binary
-a7b431d0e4ab74f472d8ae979505bf887600512a513465a7600a96078de7fd5a  test/results/test1000-riscv64-binary
-a0b7dd58e51bbf15c36483897cfb0eb5b0cc8a83e8940dcba8de7a5a378295c6  test/results/test1000-x86-binary
+94e3c367d89fe65bf8040dc2f493030ea1b607fe93f11503baf0712e143296ec  test/results/test1000-aarch64-binary
+638821776658ecb3de5fda1fb4e5bc17de93bf83fae80d132c04022d96f191f6  test/results/test1000-amd64-binary
+e704b243bc111a057ee9a57bd2e4c0340a50d939fc15a2ab9faea74cc3c2ed80  test/results/test1000-armv7l-binary
+ecd6ca4156d959513323a2f80cbc69b108523a2ead64ab296e29b5ec01501ff9  test/results/test1000-knight-posix-binary
+089493fee92d3401408d9da3f3521b17f8ab888d7133e61a7e8a1e4f9c739f11  test/results/test1000-riscv32-binary
+3353b70f065832d71315519c2a0a7356bc0f64277cb23d30b652ccb0269494fe  test/results/test1000-riscv64-binary
+ba2b25ad455782427d48804e565028c7e649867461f7644af5bfe163a64a1e05  test/results/test1000-x86-binary
